fix: handle text overflow with elipsis in list university

--- a/src/styles/pages/_university.scss
+++ b/src/styles/pages/_university.scss
@@ -1,20 +1,30 @@
+.university-page {
+  .card-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 48px;
+  }
 
-.love-tag {
-  color: theme-color("danger")
-}
-
-.card {
-  overflow: hidden;
-  .favorite-button {
-    cursor: pointer;
-    background: rgba(80,79,79,.151);
-    padding: 14px;
-    border-radius: 40px;
-    top: -9px;
-    right: -6px;
-    position: absolute;
-    z-index: 30;
+  .love-tag {
+    color: theme-color("danger")
+  }
+  
+  .card {
+    overflow: hidden;
+    .favorite-button {
+      cursor: pointer;
+      background: rgba(80,79,79,.151);
+      padding: 14px;
+      border-radius: 40px;
+      top: -9px;
+      right: -6px;
+      position: absolute;
+      z-index: 30;
+    }
   }
 }
+
 
 
